tests/cases/should_fail/literals/unclosed_unicode_literal.stderr
error: invalid character escape sequence. expected `}` after a escape sequence
 --> $DIR/unclosed_unicode_literal.hash:1:14
1 |   k := '\u{005a';
  |                ^ here
